--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,11 @@
     <color name="safezone_orange">#FF9800</color>
     <color name="safezone_red">#F44336</color>
     <color name="safezone_gray">#9E9E9E</color>
+
+
+    <color name="background_color">#F5F5F5</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="divider_color">#BDBDBD</color>
+
 </resources>
