--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,7 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    
+    <style name="Theme.SafeZone" parent="Base.Theme.SafeZone" />
+    <style name="Theme.SafeZone.NoActionBar" parent="Base.Theme.SafeZone" />
 </resources>
