--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,10 @@
     <color name="footer_selected_background">#E3F2FD</color>
 
     <!-- Primary Colors -->
+    <color name="primary">#2196F3</color>
     <color name="primary_color">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
+    <color name="primary_light">#BBDEFB</color>
     <color name="accent_color">#FF4081</color>
     <color name="secondary_color">#FF9800</color>
 
