--- a/app/src/main/res/layout/item_auction.xml
+++ b/app/src/main/res/layout/item_auction.xml
@@ -83,6 +83,14 @@
                 android:textColor="@color/text_secondary"
                 android:layout_marginTop="2dp" />
 
+            <TextView
+                android:id="@+id/tvSeller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Người bán: --"
+                android:textColor="@color/text_secondary"
+                android:layout_marginTop="6dp" />
+
             <Button
                 android:id="@+id/btnAction"
                 android:layout_width="match_parent"
